--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
     "start": "next start",
     "lint": "next lint",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d out"
+    "deploy": "gh-pages -d out --nojekyll"
   }
 }
